Anirudh | Inference framework

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -5,11 +5,24 @@
    "execution_count": 1,
    "id": "dd3d3640",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-4d8b221267e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtransformers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAlbertForTokenClassification\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAlbertTokenizer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mutils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprocess_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0minference_params\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'utils'"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import AlbertForTokenClassification, AlbertTokenizer\n",
     "import numpy as np\n",
+    "from utils import process_data\n",
     "import inference_params\n",
     "import json\n",
     "import torch.nn as nn"
@@ -40,28 +53,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "17880f56",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[     2, 171759,    516,  27926,     37,  59251, 126136,   1825,     31,\n",
-       "           3557,  17137,    555,  41281,    130, 175206,   7571,  71080,     10,\n",
-       "             66,   1301,  90529,   9327,   4765,  73061,  11867, 125491,   1342,\n",
-       "             29,     45,  13015,  52974,   2266,     37,  17132,   1551,     16,\n",
-       "              3]], device='cuda:0')"
+       "tensor([[     2,   2358,   4962,   5695,   1134,   3132,     23,    219,   1985,\n",
+       "            277,   7346,   2326, 180153,    419,      3]], device='cuda:0')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_sentence = \"विकिपीडिया सभी विषयों पर प्रामाणिक और उपयोग परिवर्तन व पुनर्वितरण के लिए स्वतन्त्र ज्ञानकोश बनाने का एक बहुभाषीय प्रकल्प है\"\n",
-    "#test_sentence = \"अमेरिका समेत अन्य देशों से जो मदद भारत पहुंची उसका क्या हुआ\"\n",
+    "#test_sentence = \"विकिपीडिया सभी विषयों पर प्रामाणिक और उपयोग परिवर्तन व पुनर्वितरण के लिए स्वतन्त्र ज्ञानकोश बनाने का एक बहुभाषीय प्रकल्प है\"\n",
+    "test_sentence = \"अमेरिका समेत अन्य देशों से जो मदद भारत पहुंची उसका क्या हुआ\"\n",
     "tokenized_sentence = tokenizer.encode(test_sentence)\n",
     "input_ids = torch.tensor([tokenized_sentence]).cuda()\n",
     "input_ids"
@@ -70,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "27cb3d0c",
+   "id": "56043ed3",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2d7b7de9",
+   "id": "d1bfafdd",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bb123e4b",
+   "id": "0baf85c2",
    "metadata": {},
    "outputs": [
     {
@@ -179,8 +189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "4c394f83",
+   "execution_count": 28,
+   "id": "777828f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,18 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "a88a2bad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4,\n",
-       "        4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 3, 4]])"
+       "array([[4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 1, 4]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,8 +222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "6cc6a061",
+   "execution_count": 30,
+   "id": "64faa8ea",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +232,7 @@
        "{'hyp': 0, 'qm': 1, 'comma': 2, 'end': 3, 'blank': 4, 'ex': 5, 'PAD': 6}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,53 +243,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "990a3ad4",
+   "execution_count": 31,
+   "id": "ed2bbeed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['[CLS]',\n",
-       " '▁विकिपीडिया',\n",
-       " '▁सभी',\n",
-       " '▁विषयों',\n",
-       " '▁पर',\n",
-       " '▁परा',\n",
-       " 'माण',\n",
-       " 'िक',\n",
-       " '▁और',\n",
-       " '▁उपयोग',\n",
-       " '▁परि',\n",
-       " 'वर',\n",
-       " 'तन',\n",
-       " '▁व',\n",
-       " '▁पुनर',\n",
-       " 'वि',\n",
-       " 'तरण',\n",
-       " '▁के',\n",
-       " '▁लिए',\n",
-       " '▁स',\n",
-       " 'वतन',\n",
-       " 'तर',\n",
-       " '▁ज',\n",
-       " 'ञ',\n",
-       " 'ान',\n",
-       " 'कोश',\n",
-       " '▁बनाने',\n",
-       " '▁का',\n",
-       " '▁एक',\n",
-       " '▁बहु',\n",
-       " 'भाष',\n",
-       " 'ीय',\n",
-       " '▁पर',\n",
-       " 'कल',\n",
-       " 'प',\n",
-       " '▁है',\n",
+       " '▁अमेरिका',\n",
+       " '▁समेत',\n",
+       " '▁अन',\n",
+       " 'य',\n",
+       " '▁देशों',\n",
+       " '▁से',\n",
+       " '▁जो',\n",
+       " '▁मदद',\n",
+       " '▁भारत',\n",
+       " '▁पहुंची',\n",
+       " '▁उसका',\n",
+       " '▁कया',\n",
+       " '▁हुआ',\n",
        " '[SEP]']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,16 +279,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "82744e1d",
+   "execution_count": 33,
+   "id": "2ed289d8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37\n",
-      "37\n"
+      "15\n",
+      "15\n"
      ]
     }
    ],
@@ -312,8 +299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "29734eae",
+   "execution_count": 34,
+   "id": "7d665343",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,30 +315,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "19967397",
+   "execution_count": 35,
+   "id": "b938c888",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "blank\t[CLS]विकिपीडियासभीविषयोंपरपरा\n",
-      "blank\tमाण\n",
-      "blank\tिकऔरउपयोगपरि\n",
-      "blank\tवर\n",
-      "blank\tतनवपुनर\n",
-      "blank\tवि\n",
-      "blank\tतरणकेलिएस\n",
-      "blank\tवतन\n",
-      "blank\tतरज\n",
-      "blank\tञ\n",
-      "blank\tान\n",
-      "blank\tकोशबनानेकाएकबहु\n",
-      "blank\tभाष\n",
-      "blank\tीयपर\n",
-      "blank\tकल\n",
-      "blank\tपहै\n",
+      "blank\t[CLS]अमेरिकासमेतअन\n",
+      "blank\tयदेशोंसेजोमददभारतपहुंचीउसकाकयाहुआ\n",
       "blank\t[SEP]\n"
      ]
     }
@@ -363,7 +336,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
+   "id": "848cafd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-38-3b665b79f3ad>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-3b665b79f3ad>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_tokens, new_labels = [], []\n",
+    "for token, label_idx in zip(tokens, label_indices[0]):\n",
+    "    if token.startswith(\"▁\"):\n",
+    "        new_tokens[-1] = new_tokens[-1] + token[1:]\n",
+    "    elif not token.startswith(\"▁\"):\n",
+    "        \n",
+    "    else:\n",
+    "        new_labels.append(list(train_encoder.keys())[list(train_encoder.values()).index(label_idx)])\n",
+    "        new_tokens.append(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7b42089f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blank\t[CLS]अमेरिकासमेतअन\n",
+      "blank\tयदेशोंसेजोमददभारतपहुंचीउसकाकयाहुआ\n",
+      "blank\t[SEP]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token, label in zip(new_tokens, new_labels):\n",
+    "    print(\"{}\\t{}\".format(label, token))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "21cf4a66",
    "metadata": {},
    "outputs": [
@@ -371,8 +392,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['विकिपीडिया', 'सभी', 'विषयों', 'पर', 'परामाणिक', 'और', 'उपयोग', 'परिवरतन', 'व', 'पुनरवितरण', 'के', 'लिए', 'सवतनतर', 'जञानकोश', 'बनाने', 'का', 'एक', 'बहुभाषीय', 'परकलप', 'है']\n",
-      "['blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'end']\n"
+      "['अमेरिका', 'समेत', 'अनय', 'देशों', 'से', 'जो', 'मदद', 'भारत', 'पहुंची', 'उसका', 'कया', 'हुआ']\n",
+      "['blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'blank', 'qm']\n"
      ]
     }
    ],
@@ -395,8 +416,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "5f36b61d",
+   "execution_count": 62,
+   "id": "c83b3531",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,8 +426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "0ecb9338",
+   "execution_count": 66,
+   "id": "2a49144d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,17 +436,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "89b10adc",
+   "execution_count": 67,
+   "id": "40dd9029",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n",
-      "20\n",
-      "20\n"
+      "12\n",
+      "12\n",
+      "12\n"
      ]
     }
    ],
@@ -437,8 +458,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "b47b2513",
+   "execution_count": 69,
+   "id": "9cc8a4a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,17 +468,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "ce3d9e05",
+   "execution_count": 72,
+   "id": "c44f1961",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'विकिपीडिया सभी विषयों पर प्रामाणिक और उपयोग परिवर्तन व पुनर्वितरण के लिए स्वतन्त्र ज्ञानकोश बनाने का एक बहुभाषीय प्रकल्प है। '"
+       "'अमेरिका समेत अन्य देशों से जो मदद भारत पहुंची उसका क्या हुआ? '"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,8 +492,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "id": "4271d9d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['अमेरिका?', 'समेत ']"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = ''\n",
+    "[s+word+punctuation for word, punctuation in zip(sentence, punctuation_dict[punctuation])]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "adebe1ef",
+   "id": "8435ca92",
    "metadata": {},
    "outputs": [],
    "source": []
